--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,7 @@ header .header-icons-container .icons {
     margin-right: 50px;
     justify-self: end;
 }
+
+header .icons span {
+    color: white;
+}
