--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url(‘https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700,900&display=swap’);
+
 body {
     margin: 0;
     padding: 0;
@@ -25,7 +27,7 @@ header .header-icons-container {
     width: 100%;
     height: 50px;
     display: grid;
-    background-color: #47cfac;
+    background-color: #212121;
 }
 
 header .header-icons-container .icons {
@@ -74,6 +76,10 @@ nav .profile-link a {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     height: 100%;
+    background-image: url("../assets/background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .home-main section {
@@ -85,10 +91,11 @@ nav .profile-link a {
 }
 
 .home-main-text {
+    font-family: "Roboto mono", monospace;
     font-size: 30px;
     font-weight: 700px;
     letter-spacing: 10px;
-    color: black;
+    color: whitesmoke;
     text-align: center;
 }
 
