--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import url(‘https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700,900&display=swap’);
 
 body {
+    font-family: "Roboto Mono", monospace;
     margin: 0;
     padding: 0;
     position: fixed;
@@ -27,7 +28,7 @@ header .header-icons-container {
     width: 100%;
     height: 50px;
     display: grid;
-    background-color: #212121;
+    background-color: #383f45;
 }
 
 header .header-icons-container .icons {
@@ -95,7 +96,19 @@ nav .profile-link a {
     font-size: 30px;
     font-weight: 700px;
     letter-spacing: 10px;
-    color: whitesmoke;
+    color: #e3e5e5;
     text-align: center;
 }
 
+.home-main-button {
+    width: 110px;
+    height: 50px;
+    background-color: #445c58;
+    display: grid;
+    align-items: center;
+}
+
+.home-main-button a {
+    font-weight: 700;
+    font-size: 18px;
+}
