--- a/css/main.css
+++ b/css/main.css
@@ -103,9 +103,11 @@ nav .profile-link a {
 .home-main-button {
     width: 110px;
     height: 50px;
-    background-color: #445c58;
+    background-color: #48cfad;
     display: grid;
     align-items: center;
+    border-color: transparent;
+    border-radius: 10px;
 }
 
 .home-main-button a {
