--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@ body {
     left: 0;
     right: 0;
 }
-
 a {
     text-decoration: none;
     display: inline;
@@ -23,14 +22,12 @@ header {
     display: grid;
     grid-template-rows: 1fr 1fr;
 }
-
 header .header-icons-container {
     width: 100%;
     height: 50px;
     display: grid;
     background-color: #383f45;
 }
-
 header .header-icons-container .icons {
     width: 300px;
     height: auto;
@@ -41,33 +38,27 @@ header .header-icons-container .icons {
     margin-right: 50px;
     justify-self: end;
 }
-
 header .icons span {
     color: white;
 }
-
 nav {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 90px;
 }
-
 nav .nav-logo-container {
     margin-left: 50px;
 }
-
 nav .nav-logo-container img {
     width: 220px;
     margin-top: 10px;
 }
-
 nav .profile-link {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     margin-right: 50px;
 }
-
 nav .profile-link a {
     color: black;
     background-color: white;
@@ -82,7 +73,6 @@ nav .profile-link a {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 .home-main section {
     display: grid;
     grid-column: 2;
@@ -90,7 +80,6 @@ nav .profile-link a {
     height: 350px;
     margin-top: 80px;
 }
-
 .home-main-text {
     font-family: "Roboto mono", monospace;
     font-size: 30px;
@@ -99,7 +88,6 @@ nav .profile-link a {
     color: #e3e5e5;
     text-align: center;
 }
-
 .home-main-button {
     width: 110px;
     height: 50px;
@@ -109,8 +97,33 @@ nav .profile-link a {
     border-color: transparent;
     border-radius: 10px;
 }
-
 .home-main-button a {
     font-weight: 700;
     font-size: 18px;
+}
+
+
+.blogs-main {
+    display: grid;
+}
+.blogs-news-container {
+    background-color: #9da2a0;
+    padding: 0 50px 40px;
+}
+.blogs-main-new {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr;
+}
+.blogs-news-img-container {
+    grid-column: 1;
+}
+.blogs-news-img-container img{
+
+}
+.blogs-news-info-container {
+    grid-column: 2;
+}
+.blogs-news-info-container p{
+    margin-bottom: 35;
 }
