--- a/css/main.css
+++ b/css/main.css
@@ -187,3 +187,26 @@ footer p {
 .blogpost-main-container article h1 {
     font-size: 35px;
 }
+.contact-main-container {
+    width: 100%;
+    min-height: 250px;
+    background-color: #9ba69f;
+    text-align: center;
+    padding-bottom: 15px;
+}
+.contact-main-container div {
+    display: inline-block;
+    width: 49.5%;
+    height: 100%;
+}
+.contact-main-container div a {
+    border-bottom: 1px solid black;
+    padding-bottom: 5px;
+}
+.contact-main-container .contact-left, .contact-right {
+    text-align: initial;
+    margin-top: 85px;
+}
+.contact-main-container img {
+    width: 100px;
+}
